client/src/Components/Home/travel.css
.travels {
    display: flex;
    flex-direction: column;
    padding: 0;
    margin: 0;
    height: auto;
    width: 100%;
    flex: 60%;
}

@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
.travels .header {
    align-self: center;
    font-size: 2em;
    color: rgb(233, 233, 233);
    font-family: 'Poppins', sans-serif;
}

.travelCard {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-auto-flow: row dense;
    justify-items: center;

    /* extra styles */
}

.travelCard_img {
    position: relative;
    text-align: center;
    color: rgb(255, 255, 255);
    background-color: rgb(185, 184, 184);
    height: 250px;
    width: 470px;
    border-radius: 5px;
    background-color: rgb(255, 255, 255);
    margin-bottom: 2em;
}

.travelCard_img img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 5px;
    opacity: 90%;
}
.travelCard_img:nth-child(1) img {
    filter: blur(2px);
    opacity: 60%;
}

.travelCard_img:nth-child(1) {
    background-color: black;
}

/* Bottom left text */
.travelCard_img h5 {
    position: absolute;
    bottom: 10px;
    margin: 0;
    right: 16px;
    font-family: 'Poppins', sans-serif;
    font-weight: 600;
    font-size: 1.5em;
}

@media (max-width: 1045px) {
    .travelCard_img {
        height: 225px;
        width: 423px;
    }
    .travels .header {
        font-size: 1.8em;
    }
}
@media (max-width: 975px) {
    .travelCard_img {
        height: 212.5px;
        width: 399.5px;
    }
    .travels .header {
        font-size: 1.7em;
    }
}
@media (max-width: 900px) {
    .travelCard_img {
        height: 200px;
        width: 376px;
    }
    .travels .header {
        font-size: 1.6em;
    }
}
@media (max-width: 850px) {
    .travelCard_img {
        height: 187.5px;
        width: 352.5px;
    }
    .travels .header {
        font-size: 1.5em;
    }
}
@media (max-width: 768px) {
    .travelCard_img {
        height: 187.5px;
        width: 352.5px;
    }
    .travels .header h4 {
        margin: 0;
        margin-bottom: 1em;
    }
}
@media (max-width: 720px) {
    .travelCard_img {
        height: 175px;
        width: 329px;
    }
    .travels .header h4 {
        margin: 0;
        margin-bottom: 1em;
    }
}
@media (max-width: 680px) {
    .travelCard_img {
        height: 162.5px;
        width: 305.5px;
    }
    .travels .header h4 {
        margin: 0;
        margin-bottom: 1em;
    }
}
@media (max-width: 680px) {
    .travelCard_img {
        height: 150px;
        width: 282px;
    }
    .travels .header h4 {
        margin: 0;
        margin-bottom: 1em;
    }
}
@media (max-width: 580px) {
    .travelCard_img {
        height: 137.5px;
        width: 258.5px;
    }
    .travels .header h4 {
        margin: 0;
        margin-bottom: 1em;
    }
}

@media (max-width: 500px) {
    .travelCard {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    .travelCard_img {
        height: 212.5px;
        width: 399.5px;
    }
    .travels .header h4 {
        margin: 0;
        margin-bottom: 1em;
    }
}
@media (max-width: 400px) {
    .travelCard {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    .travelCard_img {
        height: 187.5px;
        width: 352.5px;
    }
    .travels .header h4 {
        margin: 0;
        margin-bottom: 1em;
    }
}

